--- a/education.html
+++ b/education.html
@@ -13,8 +13,8 @@
 	<title>
 		Yingwei Li
 	</title>
-	<link rel="icon" type="image/png" href="Fudan_University.png">
-	<link rel="apple-touch-icon" href="Fudan_University.png">
+	<link rel="icon" type="image/png" href="https://joe-siyuan-qiao.github.io/JHULogo.png">
+	<link rel="apple-touch-icon" href="https://joe-siyuan-qiao.github.io/JHULogo.png">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha256-AIodEDkC8V/bHBkfyxzolUMw57jeQ9CauwhVW6YJ9CA=" crossorigin="anonymous" />
@@ -41,93 +41,114 @@
 			</div>
 			<!--<label class="hamburger"><span></span></label>-->
 		</div>
-	<div class="nav-wrap">
-		<div class="container">
-			<div class="nav desktop-nav"><ul class="wsite-menu-default">
-				<li id="active" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
-					<a href="index.html" class="wsite-menu-item" style="position: relative;">
-						Home
-					</a>
+		<div class="nav-wrap">
+			<div class="container">
+				<div class="nav desktop-nav"><ul class="wsite-menu-default">
+					<li id="pg510172221656133007" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
+						<a href="index.html" class="wsite-menu-item" style="position: relative;">
+							Home
+						</a>
 
-				</li>
-				<li id="pg359544054183527550" class="wsite-menu-item-wrap   wsite-nav-2" style="position: relative;">
-					<a href="education.html" class="wsite-menu-item" style="position: relative;">
-						Education
-					</a>
+					</li>
+					<li id="active" class="wsite-menu-item-wrap   wsite-nav-2" style="position: relative;">
+						<a href="education.html" class="wsite-menu-item" style="position: relative;">
+							Education
+						</a>
 
-				</li>
-				<!--<li id="pg510172221656133007" class="wsite-menu-item-wrap   wsite-nav-3" style="position: relative;">-->
-					<!--<a href="/publications.html" class="wsite-menu-item" style="position: relative;">-->
-						<!--Publications-->
-					<!--</a>-->
+					</li>
+					<!--<li id="pg510172221656133007" class="wsite-menu-item-wrap   wsite-nav-3" style="position: relative;">-->
+						<!--<a href="/publications.html" class="wsite-menu-item" style="position: relative;">-->
+							<!--Publications-->
+						<!--</a>-->
 
-				<!--</li>-->
-				<li id="pg701806963557798945" class="wsite-menu-item-wrap   wsite-nav-4" style="position: relative;">
-					<a href="projects.html" class="wsite-menu-item" style="position: relative;">
-						Projects
-					</a>
+					<!--</li>-->
+					<li id="pg701806963557798945" class="wsite-menu-item-wrap   wsite-nav-4" style="position: relative;">
+						<a href="projects.html" class="wsite-menu-item" style="position: relative;">
+							Projects
+						</a>
 
-				</li>
-				<li id="pg684186716131543944" class="wsite-menu-item-wrap   wsite-nav-5" style="position: relative;">
-					<a href="honor.html" class="wsite-menu-item" style="position: relative;">
-						honor
-					</a>
+					</li>
+					<li id="pg684186716131543944" class="wsite-menu-item-wrap   wsite-nav-5" style="position: relative;">
+						<a href="honor.html" class="wsite-menu-item" style="position: relative;">
+							honor
+						</a>
 
-				</li>
-			</ul>
-			</div>
-		</div><!-- end .container -->
-	</div><!-- end .nav-wrap -->
-</div>
-	<div id="doc" class="markdown-body container">
-		<p><img src="Selfie.jpg" style="float: left;max-width:200px;max-height:200px;"> &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://LiYingwei.github.io//" target="_blank"><strong>Yingwei Li</strong></a><br> &nbsp;&nbsp;&nbsp;&nbsp; Undergraduate Student<br> &nbsp;&nbsp;&nbsp;&nbsp;
-			School of Computer Science, Fudan University</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp; Email: liyw96 at gmail dot com<br> &nbsp;&nbsp;&nbsp;&nbsp; 505 Unit 1, 1433 Cailun Rd, Shanghai 201203, China<br> &nbsp;&nbsp;&nbsp;&nbsp; Tel: (+86)-18321985958</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp; <a href="CV-Yingwei-LI.pdf" target="_blank"><em>Curriculum Vitae</em></a></p>
-		<h2 id="about-me"><a class="anchor hidden-xs" href="#about-me" title="about-me"><span class="octicon octicon-link"></span></a>About me</h2>
-		<p>I am a senior undergraduate at <a href="http://www.fudan.edu.cn/en/" target="_blank">Fudan University</a>, Shanghai, China, majoring in Computer Science. In 2017 Spring, I spent wonderful five months as an exchange student in <a href="http://www.ntu.edu.tw/english/index.html" target="_blank">National Taiwan University</a>.</p>
-		<p>I joined Shanghai Key Laboratory of Intelligent Information Processing in 2015, under the supervision of Prof. <a href="https://scholar.google.com.hk/citations?user=DTbhX6oAAAAJ&hl=en" target="_blank">Xiangyang Xue</a> and Prof. Wei Zhang.</p>
-		<p>From Jun to Step 2016, I worked with Dr. <a href="http://winsty.net/" target="_blank">Naiyan Wang</a>, a principal scientist, as an algorithm intern at <a href="http://tusimple.ai/" target="_blank">Tusimple</a>.</p>
-		<p>Since July 2017 I have been working with <a href="https://en.wikipedia.org/wiki/Bloomberg_Distinguished_Professorships" target="_blank">Bloomberg Distinguished Professor</a> <a href="http://cs.jhu.edu/~ayuille/"
-		                                                                                                                                                                                    target="_blank"><Strong>Alan Yuille</strong></a> as a Research Assistant in <a href="http://www.cis.jhu.edu/" target="_blank">Center for Imaging Science</a> at <a href="http://www.jhu.edu" target="_blank">Johns Hopkins University</a></p>
-		<h2
-						id="research"><a class="anchor hidden-xs" href="#research" title="research"><span class="octicon octicon-link"></span></a>Research Interests</h2>
-			<p>My primary interests lie in the field of Computer Vision, Artificial Intelligence, and  Understanding Deep Neural Network.</p>
-	<!--<div class="ui-toc dropup unselectable hidden-print" style="display:none;">-->
-		<!--<div class="pull-right dropdown">-->
-			<!--<a id="tocLabel" class="ui-toc-label btn btn-default" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" title="Table of content">-->
-				<!--<i class="fa fa-bars"></i>-->
-			<!--</a>-->
-			<!--<ul id="ui-toc" class="ui-toc-dropdown dropdown-menu" aria-labelledby="tocLabel">-->
-				<!--<div class="toc">-->
-					<!--<ul class="nav">-->
-						<!--<li class=""><a href="#siyuan-qiao">Siyuan Qiao </a>-->
-							<!--<ul class="nav">-->
-								<!--<li><a href="#about-me">About me</a></li>-->
-								<!--<li><a href="#research">Research</a></li>-->
-								<!--<li><a href="#publications">Publications</a></li>-->
-							<!--</ul>-->
-						<!--</li>-->
-					<!--</ul>-->
-				<!--</div>-->
-				<!--<div class="toc-menu"><a class="expand-toggle" href="#">Expand all</a><a class="back-to-top" href="#">Back to top</a><a class="go-to-bottom" href="#">Go to bottom</a></div>-->
-			<!--</ul>-->
-		<!--</div>-->
-	<!--</div>-->
-	<!--<div id="ui-toc-affix" class="ui-affix-toc ui-toc-dropdown unselectable hidden-print" data-spy="affix" style="top:17px;display:none;">-->
-		<!--<div class="toc">-->
-			<!--<ul class="nav">-->
-				<!--<li class=""><a href="#siyuan-qiao">Siyuan Qiao </a>-->
-					<!--<ul class="nav">-->
-						<!--<li><a href="#about-me">About me</a></li>-->
-						<!--<li><a href="#research">Research</a></li>-->
-						<!--<li><a href="#publications">Publications</a></li>-->
-					<!--</ul>-->
-				<!--</li>-->
-			<!--</ul>-->
-		<!--</div>-->
-		<!--<div class="toc-menu"><a class="expand-toggle" href="#">Expand all</a><a class="back-to-top" href="#">Back to top</a><a class="go-to-bottom" href="#">Go to bottom</a></div>-->
+					</li>
+					</ul>
+				</div>
+			</div><!-- end .container -->
+		</div><!-- end .nav-wrap -->
 	</div>
+
+	<div id="doc" class="markdown-body container">
+		<div id="edu">
+		<h2 id="education"><a class="anchor hidden-xs" href="#education" title="education"><span class="octicon octicon-link"></span></a>Education</h2>
+		<p>B.S in Computer Science
+			<span style="float:right">Sep. 2014 - Jun. 2018 (Expected)</span> <br>
+			School of Computer Science, Fudan University<br>
+		<strong>GPA:</strong></br>
+			&nbsp;&nbsp;&nbsp;&nbsp; 93.5/100(3.74/4.00, overall) Ranking: 7/119<br>
+			&nbsp;&nbsp;&nbsp;&nbsp; 98.7/100(3.95/4.00, major) &nbsp;&nbsp;Top3
+		</p>
+
+		<p>Non-degree Undergraduate Exchange
+			<span style="float:right">Feb. 2017 - Jun. 2017</span> <br>
+			Department of Computer Science & Information Engineering(CSIE),<br>
+			National Taiwan University (NTU)<br>
+			<strong>Overall GPA:</strong> 93.0/100(4.00/4.30)
+		</p>
+		</div>
+
+		<div id="cou">
+		<h2 id="course"><a class="anchor hidden-xs" href="#course" title="course"><span class="octicon octicon-link"></span></a>Course</h2>
+		<p><strong>Math:</strong><br>
+			A&nbsp; <span>Mathematical Analysis<br></span>
+			A-<span>Linear Algebra<br></span>
+			A&nbsp; <span>Probability Theory and Mathematical Statistics<br></span>
+			A&nbsp; <span>Algebra Structure and Mathematical Logic<br></span>
+			A&nbsp; <span>Set Theory and Graph Theory<br></span>
+			A&nbsp; <span>Optimization and Mechine Learning</span>*
+		</p>
+		<p><strong>Programming:</strong><br>
+			A&nbsp; <span>C Programming<br></span>
+			A&nbsp; <span>C++ Programming<br></span>
+			A&nbsp; <span>Data Structure<br></span>
+			A+<span>Parallel Programming</span>*
+		</p>
+		<p><strong>System and Architecture related:</strong><br>
+			A&nbsp; <span>Digital Logic and Component Design<br></span>
+			A&nbsp; <span>Introduction to Computer System<br></span>
+			A&nbsp; <span>Database System<br></span>
+			A&nbsp; <span>Software Architecture</span>
+		</p>
+		<p><strong>AI related:</strong><br>
+			A&nbsp; <span>Artificial Intelligence<br></span>
+			A-<span>Computer Vision<br></span>
+			A&nbsp; <span>Human-Computer Interaction<br></span>
+			A&nbsp; <span>Digital Signal Processing and Speech Signal Analysis<br></span>
+			A-<span>Web Retrieval and Mining</span>*
+		</p>
+		<p><strong>MISC:</strong><br>
+			A&nbsp; <span>Data Communication and Computer Network</span>
+		</p>
+		* Courses were opened for graduate students in NTU
+		</div>
+		<div>
+			<h2 id="skills"><a class="anchor hidden-xs" href="#skills" title="skills"><span class="octicon octicon-link"></span></a>Skills</h2>
+			<div class="container">
+			<div class="row">
+				<div class="col-3">Programming Languages</div>
+				<div class="col-9">C/C++, Python, CUDA, VHDL, Javascript, OpenCL</div>
+			</div>
+			<div class="row">
+				<div class="col-3">Tools</div>
+				<div class="col-9">Matlab, Caffe, Tensorflow, MXNet</div>
+			</div>
+			</div>
+		</div>
+	</div>
+
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous" defer></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gist-embed/2.5/gist-embed.min.js" integrity="sha256-hmjTba0C6gzDF3N0+Opwd/Jxk4e8ypWrcBw/57rY0Dk=" crossorigin="anonymous" defer></script>
