--- a/honor.html
+++ b/honor.html
@@ -50,7 +50,7 @@
 						</a>
 
 					</li>
-					<li id="active" class="wsite-menu-item-wrap   wsite-nav-2" style="position: relative;">
+					<li id="pg359544054183527550" class="wsite-menu-item-wrap   wsite-nav-2" style="position: relative;">
 						<a href="education.html" class="wsite-menu-item" style="position: relative;">
 							Education
 						</a>
@@ -68,7 +68,7 @@
 						</a>
 
 					</li>
-					<li id="pg684186716131543944" class="wsite-menu-item-wrap   wsite-nav-5" style="position: relative;">
+					<li id="active" class="wsite-menu-item-wrap   wsite-nav-5" style="position: relative;">
 						<a href="honor.html" class="wsite-menu-item" style="position: relative;">
 							honor
 						</a>
@@ -82,64 +82,21 @@
 
 	<div id="doc" class="markdown-body container">
 		<div id="edu">
-		<h2 id="education"><a class="anchor hidden-xs" href="#education" title="education"><span class="octicon octicon-link"></span></a>Education</h2>
-		<p>B.S in Computer Science
-			<span style="float:right">Sep. 2014 - Jun. 2018 (Expected)</span> <br>
-			School of Computer Science, Fudan University<br>
-		<strong>GPA:</strong></br>
-			&nbsp;&nbsp;&nbsp;&nbsp; 93.5/100(3.74/4.00, overall) &nbsp;&nbsp;&nbsp;&nbsp; Ranking: 7/119<br>
-			&nbsp;&nbsp;&nbsp;&nbsp; 98.7/100(3.95/4.00, major) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Top3
-		</p>
+		<!--<h2 id="education"><a class="anchor hidden-xs" href="#education" title="education"><span class="octicon octicon-link"></span></a>Education</h2>-->
+		<p><strong>Academic:</strong><br>
+			Excellent Student of Fudan University (top 10%)<span style="float:right">2016</span> <br>
+			First Prize Scholarship(top 5%)<span style="float:right">2016</span> <br>
 
-		<p>Non-degree Undergraduate Exchange
-			<span style="float:right">Feb. 2017 - Jun. 2017</span> <br>
-			Department of Computer Science & Information Engineering(CSIE)<br>
-			National Taiwan University (NTU)<br>
-			<strong>Overall GPA:</strong>
-			&nbsp;&nbsp;&nbsp;&nbsp; 93.0/100(4.00/4.30)
+			SCSK Scholarship (Only 2 in the Special Class)<span style="float:right">2015</span> <br>
 		</p>
-		</div>
-
-		<div id="cou">
-		<h2 id="course"><a class="anchor hidden-xs" href="#course" title="course"><span class="octicon octicon-link"></span></a>Course</h2>
-		<p><strong>Math:</strong><br>
-			A&nbsp; <span>Mathematical Analysis<br></span>
-			A-<span>Linear Algebra<br></span>
-			A&nbsp; <span>Probability Theory and Mathematical Statistics<br></span>
-			A&nbsp; <span>Algebra Structure and Mathematical Logic<br></span>
-			A&nbsp; <span>Set Theory and Graph Theory<br></span>
-			A&nbsp; <span>Optimization and Mechine Learning</span>*
+		<p><strong>Research-oriented:</strong><br>
+			Chun-Tsung Scholarship (top 3%, funded by Tsung-Dao Lee, winner of Nobel Prize in Physics)<span style="float:right">2016</span> <br>
 		</p>
-		<p><strong>Programming:</strong><br>
-			A&nbsp; <span>C Programming<br></span>
-			A&nbsp; <span>C++ Programming<br></span>
-			A&nbsp; <span>Data Structure<br></span>
-			A+<span>Parallel Programming</span>*
+		<p><strong>Contest:</strong><br>
+			Second Prize, Shanghai College Student Mathematical Contest in Modeling<span style="float:right">2015</span> <br>
+			Silver Medal, ACM-ICPC Shanghai Regional Contest<span style="float:right">2014</span> <br>
+			Bronze medal, China National Olympiad in Informatics<span style="float:right">2013</span> <br>
 		</p>
-		<p><strong>System and Architecture related:</strong><br>
-			A&nbsp; <span>Digital Logic and Component Design<br></span>
-			A&nbsp; <span>Introduction to Computer System<br></span>
-			A&nbsp; <span>Database System<br></span>
-			A&nbsp; <span>Software Architecture</span>
-		</p>
-		<p><strong>AI related:</strong><br>
-			A&nbsp; <span>Artificial Intelligence<br></span>
-			A-<span>Computer Vision<br></span>
-			A&nbsp; <span>Human-Computer Interaction<br></span>
-			A&nbsp; <span>Digital Signal Processing and Speech Signal Analysis<br></span>
-			A-<span>Web Retrieval and Mining</span>*
-		</p>
-		<p><strong>MISC:</strong><br>
-			A&nbsp; <span>Data Communication and Computer Network</span>
-		</p>
-		* Courses were opened for graduate students in NTU
-		</div>
-		<div>
-			<h2 id="skills"><a class="anchor hidden-xs" href="#skills" title="skills"><span class="octicon octicon-link"></span></a>Skills</h2>
-			<p><strong>Programming Languages</strong><br>
-			C/C++, Python, CUDA, VHDL, Javascript, OpenCL</p>
-			<p><strong>Tools</strong><br>
-				Matlab, Caffe, Tensorflow, MXNet</p>
 		</div>
 	</div>
 
