--- a/education.html
+++ b/education.html
@@ -13,8 +13,8 @@
 	<title>
 		Yingwei Li
 	</title>
-	<link rel="icon" type="image/png" href="https://joe-siyuan-qiao.github.io/JHULogo.png">
-	<link rel="apple-touch-icon" href="https://joe-siyuan-qiao.github.io/JHULogo.png">
+	<link rel="icon" type="image/png" href="Fudan_University.png">
+	<link rel="apple-touch-icon" href="Fudan_University.png">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha256-AIodEDkC8V/bHBkfyxzolUMw57jeQ9CauwhVW6YJ9CA=" crossorigin="anonymous" />
