--- a/honor.html
+++ b/honor.html
@@ -62,12 +62,12 @@
 						<!--</a>-->
 
 					<!--</li>-->
-					<li id="pg701806963557798945" class="wsite-menu-item-wrap   wsite-nav-4" style="position: relative;">
+					<!--li id="pg701806963557798945" class="wsite-menu-item-wrap   wsite-nav-4" style="position: relative;">
 						<a href="projects.html" class="wsite-menu-item" style="position: relative;">
 							Projects
 						</a>
 
-					</li>
+					</li-->
 					<li id="active" class="wsite-menu-item-wrap   wsite-nav-5" style="position: relative;">
 						<a href="honor.html" class="wsite-menu-item" style="position: relative;">
 							honor
