--- a/projects.html
+++ b/projects.html
@@ -62,12 +62,12 @@
 						<!--</a>-->
 
 					<!--</li>-->
-					<li id="active" class="wsite-menu-item-wrap   wsite-nav-4" style="position: relative;">
+					<!--li id="active" class="wsite-menu-item-wrap   wsite-nav-4" style="position: relative;">
 						<a href="projects.html" class="wsite-menu-item" style="position: relative;">
 							Projects
 						</a>
 
-					</li>
+					</li-->
 					<li id="pg684186716131543944" class="wsite-menu-item-wrap   wsite-nav-5" style="position: relative;">
 						<a href="honor.html" class="wsite-menu-item" style="position: relative;">
 							honor
@@ -81,7 +81,7 @@
 	</div>
 
 	<div id="doc" class="markdown-body container">
-		Coming soon...
+
 	</div>
 
 
